tests/baselines/reference/trailingCommaInHeterogenousArrayLiteral1.errors.txt
==== tests/cases/compiler/trailingCommaInHeterogenousArrayLiteral1.ts (4 errors) ====
    class arrTest {
        test(arg1: number[]) {    }
        callTest() {
            // these two should give the same error
            this.test([1, 2, "hi", 5, ]);
                 ~~~~
!!! trailingCommaInHeterogenousArrayLiteral1.ts(5,14): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Types of property 'pop' of types '{}[]' and 'number[]' are incompatible:
!!! 		Call signatures of types '() => {}' and '() => number' are incompatible.
                 ~~~~
!!! trailingCommaInHeterogenousArrayLiteral1.ts(5,14): error TS2087: Could not select overload for 'call' expression.
            this.test([1, 2, "hi", 5]); 
                 ~~~~
!!! trailingCommaInHeterogenousArrayLiteral1.ts(6,14): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Types of property 'pop' of types '{}[]' and 'number[]' are incompatible:
!!! 		Call signatures of types '() => {}' and '() => number' are incompatible.
                 ~~~~
!!! trailingCommaInHeterogenousArrayLiteral1.ts(6,14): error TS2087: Could not select overload for 'call' expression.
        }
    }
    